# hazel-c

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
doxygen/: hazel
hazel/: CMakeLists.txt
hazel/include/hazel/: common.h  connection_state.h  errors.h  ip_mode.h  reader.h  send_option.h  writer.h
hazel/include/hazel/udp/: client.h  connection.h  socket.h
hazel/src/: reader.c  utils.h  writer.c
hazel/src/udp/: client.c  connection.c  socket.c
tmptest/: main.c
